--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "~5.2.2",
     "@ng-web-apis/common": "^1.9.0",
     "@ng-web-apis/geolocation": "^1.0.3",
-    "bootstrap": "3.3.7",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
